--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,4 @@
-.home{
+.hero{
     height: 100vh;
     width: 100%;
     position: relative;
@@ -8,6 +8,8 @@
         width: 100%;
         object-fit: cover;
         display: block;
+        mask-image: linear-gradient(to right , black , transparent);
+        
     }
 
 }
