--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,15 +1,61 @@
-.hero{
-    height: 100vh;
-    width: 100%;
-    position: relative;
+.hero {
+  height: 100vh;
+  width: 100%;
+  position: relative;
 
-    img{
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        display: block;
-        mask-image: linear-gradient(to right , black , transparent);
-        
+  .banner-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    display: block;
+    mask-image: linear-gradient(to left, black 75%, transparent);
+    -webkit-mask-image: linear-gradient(to left, black 75%, transparent);
+  }
+  .hero-caption {
+    position: absolute;
+    width: 100%;
+    padding-left: 6%;
+    bottom: 0;
+
+    .caption-img {
+      width: 90%;
+      max-width: 420px;
+      margin-bottom: 30px;
     }
 
+    p {
+      max-width: 600px;
+      font-size: 17px;
+      margin-bottom: 20px;
+    }
+
+    .hero-btn {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 4%;
+
+      .btn.dark-btn {
+        color: #fff;
+        background-color: #6d6d6eb3;
+      }
+
+      .btn {
+        all: unset;
+        padding: 8px 20px;
+        border-radius: 4px;
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 15px;
+        font-weight: 600;
+        cursor: pointer;
+        color: #000;
+
+        img {
+          width: 25px;
+        }
+      }
+    }
+  }
 }
