--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 *{
     margin:0;
     padding:0;
-    box-sizing:border-box; 
+    box-sizing:border-box;
+    font-family: poppins; 
 }
 html,body{
     height:100%;
