--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .hero {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
   position: relative;
 
@@ -58,4 +58,8 @@
       }
     }
   }
+}
+
+.home > .more-cards{
+  padding-left: 6%;
 }
