--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -31,6 +31,26 @@
 
       li {
         cursor: pointer;
+        position: relative;
+        transition: all 0.5s;
+
+        &::after {
+          content: "";
+          position: absolute;
+          height: 3px;
+          width: 0%;
+          background-color: red;
+          bottom: -5px;
+          border-radius: 100px;
+          left: 0;
+          transition: width 0.3s;
+        }
+
+        &:hover {
+          &::after {
+            width: 100%;
+          }
+        }
       }
     }
   }
